force-app/main/default/objects/TR1__Purchase_Order__c/fields/Client_Contact_Chaser_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Chaser_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Contact Chaser Email Sent</label>
    <type>Checkbox</type>
</CustomField>