force-app/main/default/objects/TR1__Purchase_Order__c/fields/PO_Type__c.field-meta.xml
<CustomField>
    <fullName>PO_Type__c</fullName>
    <label>PO Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Fixed Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>