force-app/main/default/objects/TR1__Purchase_Order__c/fields/Sensitive_Data_Record__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Data_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sensitive Data Record</label>
    <referenceTo>Sensitive_Data__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>