force-app/main/default/objects/TR1__Purchase_Order__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>sirenum__Site__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Site</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>sirenum__Site__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>